@@ -129,7 +129,7 @@ const httpserver = http.createServer((req, res) => {
                 return;
               }
               res.writeHead(200, { 'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*' });
-              res.end("{ 'message': 'cdnbox config updated.'");
+              res.end('{ "message": "cdnbox config updated." }');
               throw("Config reload due to config PUT operation.");
             });
           } else {
@@ -166,7 +166,7 @@ const httpserver = http.createServer((req, res) => {
                     return;
                   }
                   res.writeHead(200, { 'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*' });
-                  res.end("{ 'message': 'cdnbox updated.'");
+                  res.end('{ "message": "cdnbox updated." }');
                   throw("Config reload due to copyfrom operation.");
                 });
               }
